--- a/style.css
+++ b/style.css
@@ -1,8 +1,50 @@
+body {
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+main {
+    margin-left: 25%;
+}
+
+header nav {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.navbar {
+    background-color: #1f2039;
+    overflow: hidden;
+    height: 70PX;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 24px 20px;
+    text-decoration: none;
+    width: 150px;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navbar a.active {
+    background-color: #696484;
+    color: white;
+    height: 70PX;
+}
 
 aside {
     background-color: rgb(167, 191, 206);
     width: 7cm;
-    height: 22.88cm;
+    height: 28cm;
     float: left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
@@ -11,16 +53,16 @@ aside {
     border: 3px solid rgb(36, 27, 80);
     border-right: 3px solid rgb(36, 27, 80);
 }
+
 .page {
     width: 14.2cm;
-    height: 23cm;
+    height: 28.1cm;
     background-color: rgb(194, 232, 255);
     float: left;
-    
 }
 
 .section {
-    height: 5cm;
+    height: 6cm;
     width: 14cm;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -38,7 +80,7 @@ aside {
     font-size: 11px;
     flex-wrap: wrap;
     width: 5.5cm;
-    height: 3cm;
+    height: 4.5cm;
     margin-left: 3px;
     background-color: rgb(184, 255, 222);
     padding-left: 5px;
@@ -53,7 +95,7 @@ aside {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(130, 114, 150);
     width: 7.5cm;
-    height: 3cm;
+    height: 4.5cm;
     font-size: 11px;
     flex-wrap: wrap;
     padding: 10px;
@@ -62,15 +104,7 @@ aside {
     border-radius: 3%;
 }
 
-body {
-    background-color: rgb(255, 255, 255);
-    margin-bottom: 10%;
-    margin-left: 30%;
-    width: max-content;
-    height: auto
-    
-}
-h1 {
+h3 {
     font-size: 23px;
     color: rgb(122, 53, 110);
     font-style: italic;
@@ -79,16 +113,16 @@ h1 {
     border-radius: 45%;
     text-align: center;
 }
+
 img {
-    height: 75%;
-    width: 75%;
-    border-radius: 40%;
+    height: 35%;
+    width: 35%;
+    border-radius: 3%;
     border: 2px solid;
     border-color: rgb(36, 27, 80);
-    
-    
 }
-h2 {
+
+h10 {
     font-family: sans-serif;
     font-size: 12px;
     text-align: left;
@@ -99,7 +133,7 @@ ul{
     list-style-type: none;
     text-align: left;
     font-size: 11px;
-    
+    color: #000;
 }
 .p {
     text-align: center;
@@ -110,8 +144,8 @@ ul{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(184, 255, 222);
-    width: 6.5cm;
-    height: 3.5cm;
+    width: 12cm;
+    height: 3cm;
     margin: auto;
     font-size: 11px;
     flex-wrap: wrap;
@@ -121,20 +155,108 @@ ul{
     border-radius: 3%;
 }
 .v {
-    float: none;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(184, 255, 222);
-    width: 7cm;
-    height: 2cm;
-    margin:auto;
-    margin-top: 7%;
-    font-size: 11px;
-    flex-wrap: wrap;
-    padding: 5px;
-    border: 2px solid;
-    border-color: rgb(130, 114, 150);
-    border-radius: 3%;
+    width: 14cm;
+    height: 1.8cm;
+    background-color: rgb(255, 255, 255);
 }
+.w:hover {
+    color: rgb(255, 102, 0);
+    font-weight: bold;
+}
+.d:hover {
+    color: rgb(255, 102, 0);
+    font-weight: bold;
+}
+.g:hover {
+    color: rgb(255, 102, 0);
+    font-weight: bold;
+}
+
+
+* {
+    margin: 0;
+  }
+  
+  .port {
+    font-family: 'Manrope', sans-serif;
+    font-size: 1em;
+    background-color: #1f2039;
+    margin: 20%;
+    margin-top: 1%;
+  }
+  
+  a {
+    color: #242424;
+    text-decoration: none;
+  }
+  
+  em {
+    color: #a5b4fc;
+    font-style: normal;
+  }
+  
+  h5 {
+    font-size: 3.5em;
+    color: #a5b4fc;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  p,
+  li {
+    font-size: 1.1em;
+    color: #f9f8ff;
+  }
+  
+  header {
+    background-color: white;
+    padding: 20px 50px;
+  }
+  
+  .cta {
+    display: inline-block;
+    background: linear-gradient(#8e86b5, #acaeed);
+    color: white;
+    border-radius: 50px;
+    padding: 20px 30px;
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  .cta:hover {
+    background: linear-gradient(#696484, #8788ba);
+    text-decoration: none;
+  }
+  
+  section {
+    padding: 80px;
+  }
+  
+ 
+
+  
+  @media screen and (max-width: 996px) {
+    header {
+      padding: 20px 20px;
+    }
+  
+    h1 {
+      font-size: 2em;
+    }
+  
+    section {
+      padding: 50px 20px 50px 20px;
+    }
+    
+    nav a {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+  }
+  
+
 
 
